--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "goit-node-cli",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -13,12 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.0"
   },
   "dependencies": {
     "commander": "^12.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nanoid": "^5.0.6"
-  }
+  },
+  "description": ""
 }
